--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
       <section>
         <div id="title">
           <h1>Heregoesnothing</h1>
-          <p></p>
+          <p>Here is some more text space</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/karolinahamilton">karolinahamilton</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p>Hello World</p>
+        <p>Hello World
+        How are you today</p>
       </section>
 
     </div>
