--- a/index.html
+++ b/index.html
@@ -44,6 +44,49 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+     <header class="container">
+    <div class="row">
+      <h1 class="col-sm-4">Joy through the lens</h1>
+      <nav class="col-sm-8 text-right">
+        <p>newest</p>
+        <p>categories</p>
+        <p>contact</p>
+      </nav>
+    </div>
+</header>
+<div class="container">
+	       <h1 class="col-sm-4">Heading</h1>
+               <nav class="col-sm-8 text-right">
+               <p>nav item 1</p>
+               <p>nav item 2</p>
+               <p>nav item 3</p>
+	  
+<h2>Welcome</h2>
+  </div>
+  
+<div class="nav">
+<ul>
+  <li>Nature</li>
+  <li>Kids</li>
+  <li>Animals</li>
+  </ul>
+</div>
+<div class="main">
+	<h1>My Photo Pages!</h1>
+	<h2> This is some of my favorite pictures<h2>
+	<p> I love to take pictures and it's fun to be able to share. <p>
+	<a href="karolinahamilton.github.io"> My Github</a>
+    </div>	
+   <div class="gallery">
+      <figure class="gallery-item">
+        <img class="thumbnail" src="Chrysanthemum.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="Jellyfish.jpg">
+      </figure>
+      <figure class="gallery-item">
+        <img class="thumbnail" src="Chrysanthemum.jpg">
+      </figure>
+    </div>
   </body>
 </html>
