--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/karolinahamilton/HereGoesNothing">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/karolinahamilton/HereGoesNothing/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/karolinahamilton/HereGoesNothing/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
+          <li class="AAAAA"><a href="https://github.com/karolinahamilton/HereGoesNothing">aaa</a></li>
+          <li class="BBBBB"><a href="https://github.com/karolinahamilton/HereGoesNothing/zipball/master">bbb</a></li>
+          <li class="CCCCC"><a href="https://github.com/karolinahamilton/HereGoesNothing/tarball/master">ccc</a></li>
+          <li class="DDDDD">ddd</li>
         </nav>
       </div><!-- end header -->
 
@@ -35,11 +35,14 @@
           <p>Here is some more text space</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/karolinahamilton">karolinahamilton</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits right">I can add something else here</a></span>
         </div>
 
-        <p>Hello World
-        How are you today</p>
+        <p>
+        	<h1>Hello World<h1> 
+        How are you today
+        color:darkblue; font:arial;
+        </p>
       </section>
 
     </div>
