--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css"/>
 </head>
 <body>
-	<h1>My Photoes.</h1>
+	<h1>My Photos.</h1>
 	<div class="happy">
     
 		<h2>My happy place.</h2>
