--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>My Photos.</h1>
-	<div class="happy">
+	<div class="hero">
     
 		<h2>My happy place.</h2>
 		<p>...everyday</p>
