--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pictures</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css"/>
+	<title>Sprout</title>
+	<link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
-	<h1>My Photos.</h1>
+	<h1>Mystwood Publishers Ltd.</h1>
 	<div class="hero">
     
-		<h2>My happy place.</h2>
-		<p>...everyday</p>
-		<a href="#">and then some.</a>
+		<h2>Sprout.</h2>
+		<p>A book by J. Daniel Bedford</p>
+		<a href="#">Read now.</a>
 	</div>
-<p id="footer">&copy; TBD</p>
+<p id="footer">&copy; Mystwood Publishers Limited</p>
 </body>
 </html>
