--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sprout</title>
-	<link rel="stylesheet" type="text/css" href="main.css"/>
+	<title>Here goes nothing</title>
+	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css"/>
 </head>
 <body>
 	<h1>Mystwood Publishers Ltd.</h1>
