--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<h1>Mystwood Publishers Ltd.</h1>
 	<div class="hero">
     
-		<h2>Sprout.</h2>
-		<p>A book by J. Daniel Bedford</p>
-		<a href="#">Read now.</a>
+		<h2>Hello.</h2>
+		<p>This is my world</p>
+		<a href="#">See now.</a>
 	</div>
-<p id="footer">&copy; Mystwood Publishers Limited</p>
+<p id="footer">&copy; tbd </p>
 </body>
 </html>
