--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css"/>
 </head>
 <body>
-	<h1>Mystwood Publishers Ltd.</h1>
+	<h1>welcome to my house.</h1>
 	<div class="hero">
     
 		<h2>Hello.</h2>
