--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
 	<title>Here goes nothing</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css"/>
+	<meta charset="utf-8"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<h1>welcome to my house.</h1>
@@ -13,6 +18,18 @@
 		<p>This is my world</p>
 		<a href="#">See now.</a>
 	</div>
+	
+	<div class="container">
+        <h1>My First Bootstrap Page</h1>
+        <p>This part is inside a .container class. The .container class provides a responsive fixed width container.</p> 
+        </div>
+        
+        <div class="container-fluid">
+        <h1>My First Fluid Bootstrap</h1>
+        <p>This part is inside a .container-fluid class. The .container-fluid class provides a full width container, spanning the entire width of the viewport.</p> 
+        </div>
+
+	
 <p id="footer">&copy; tbd </p>
 </body>
 </html>
