--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css"/>
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -28,7 +28,12 @@
         <h1>My First Fluid Bootstrap</h1>
         <p>This part is inside a .container-fluid class. The .container-fluid class provides a full width container, spanning the entire width of the viewport.</p> 
         </div>
-
+        
+<div class="row">
+  <div class="col-sm-2">This is .col-sm-2</div>
+  <div class="col-sm-6">This is .col-sm-6</div>
+  <div class="col-sm-4">This is .col-sm-4</div>
+</div>
 	
 <p id="footer">&copy; tbd </p>
 </body>
