--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
   <div class="col-sm-6">This is .col-sm-6 Lorem ipsum dolor sit amet, mauris ac commodo wisi aliquam, amet dictum nulla wisi lacus rhoncus, sapien praesent fermentum, a soluta commodo justo consectetuer. Turpis nunc volutpat praesent sit. Posuere velit velit nonummy lacinia eu. Pellentesque enim, velit wisi, mauris at nulla lacinia sed ante eu, suspendisse dictum mollis per nihil adipiscing sem. Sollicitudin in ac. Volutpat blandit luctus lorem curabitur urna adipiscing, cursus volutpat dolor per imperdiet lacus, imperdiet vivamus. Vestibulum mauris nec eu. Metus voluptate officia ac proin ultricies id. In dui, et dui amet ut, quam pellentesque urna aliquam velit, eros ligula, ligula non. Nibh a proin vel, cras varius quis. Mi nisl amet. Rutrum interdum et.</div>
   <div class="col-sm-4"> Lorem ipsum dolor sit amet, mauris ac commodo wisi aliquam, amet dictum nulla wisi lacus rhoncus, sapien praesent fermentum, a soluta commodo justo consectetuer. Turpis nunc volutpat praesent sit. Posuere velit velit nonummy lacinia eu. Pellentesque enim, velit wisi, mauris at nulla lacinia sed ante eu, suspendisse dictum mollis per nihil adipiscing sem. Sollicitudin in ac. Volutpat blandit luctus lorem curabitur urna adipiscing, cursus volutpat dolor per imperdiet lacus, imperdiet vivamus. Vestibulum mauris nec eu. Metus voluptate officia ac proin ultricies id. In dui, et dui amet ut, quam pellentesque urna aliquam velit, eros ligula, ligula non. Nibh a proin vel, cras varius quis. Mi nisl amet. Rutrum interdum et.This is .col-sm-4</div>
 </div>
+
+<div class="container">
+  <h2>Image</h2>
+  <p>The .img-responsive class makes the image scale nicely to the parent element (resize the browser window to see the effect):</p>
+  <img src="images/tulips.jpg" class="img-responsive" alt="Cinque Terre" width="304" height="236">
+</div>
+  
+   <div class="container">
+      <h2>Image</h2>
+      <p>The .img-rounded class adds rounded corners to an image (not available in IE8):</p>
+      <img src="images/tulips.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="236">
+    </div>
+
+  <div class="main">
+  	<section>
+	<h1>My Photo section 2!</h1> 
+	</section>
+	<h2> More favorite pictures<h2>
+	<p> I love to take pictures and it's fun to be able to share. <p>
+	<a href="github.com"> Github</a>
+    </div>
 	
 <p id="footer">&copy; tbd </p>
 </body>
