--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 <div class="container">
   <h2>Image</h2>
   <p>The .img-responsive class makes the image scale nicely to the parent element (resize the browser window to see the effect):</p>
-  <img src="images/tulips.jpg" class="img-responsive" alt="Cinque Terre" width="304" height="236">
+  <img src="images/IMG_7038[1].JPG" class="img-responsive" alt="Pic" width="304" height="236">
 </div>
   
    <div class="container">
       <h2>Image</h2>
-      <p>The .img-rounded class adds rounded corners to an image (not available in IE8):</p>
-      <img src="images/tulips.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="236">
+      <p>Picture 1 The .img-rounded class adds rounded corners to an image (not available in IE8):</p>
+      <img src="images/IMG_7038[1].JPG" class="img-rounded" alt="Picture 1" width="304" height="236">
     </div>
 
   <div class="main">
