--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<h2>Hello.</h2>
 		<p>This is my world</p>
 		<a href="#">See now.</a>
+		<img src="images/IMG_7040[1].JPG" class="img-responsive" alt="Pic" width="304" height="236">
 	</div>
 	
 	<div class="container">
@@ -44,7 +45,7 @@
    <div class="container">
       <h2>Image</h2>
       <p>Picture 1 The .img-rounded class adds rounded corners to an image (not available in IE8):</p>
-      <img src="images/IMG_7038[1].JPG" class="img-rounded" alt="Picture 1" width="304" height="236">
+      <img src="images/IMG_7043[1].JPG.JPG" class="img-rounded" alt="Picture 1" width="304" height="236">
     </div>
 
   <div class="main">
