--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img src="images/IMG_7043[1].JPG.JPG" class="img-rounded" alt="Picture 1" width="304" height="236">
     </div>
 
-  <div class="main">
+  <div class="hero">
   	<section>
 	<h1>My Photo section 2!</h1> 
 	</section>
