--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
+<heading>
+	
+	<div class="hero">
+   
+		<h2>welcome to my house</h2>
+		<p>This is my world</p>
+		<a href="#">See now.</a>
+		<img src="images/IMG_7040[1].JPG" class="cover" alt="Pic" width="304" height="236">
+	</div>
+</heading>
+
 <body>
-	<h1>welcome to my house.</h1>
+	<h1>Hello</h1>
 	<div class="hero">
     
 		<h2>Hello.</h2>
